k8s/aggregator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cc-aggregator-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: cc-aggregator
