k8s/probe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cc-probe-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: cc-probe
